# rambip.github.io

./: academic.ipynb  baby_names.ipynb  generate.py  home.ipynb  info_theory.ipynb  minimalist_design.ipynb  pyproject.toml  rubiks.ipynb  setup.py  style.css
.github/workflows/: deploy.yml
.ipynb_checkpoints/: academic-checkpoint.ipynb  rubiks-checkpoint.ipynb
src/myself/: __init__.py
